testsuite/tests/parser/should_fail/StringInterpolationNoExpr.hs
{-# LANGUAGE StringInterpolation #-}

test :: String
test = s"a ${} b"
