testsuite/tests/parser/should_fail/StringInterpolationNoExpr.stderr
StringInterpolationNoExpr.hs:4:14: error: [GHC-58481]
    parse error on input ‘}’

